--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,17 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+	"manifest_version": 2,
+	"name": "Tproger Launcher",
+	"description": "Запускатор представительств Tproger",
+	"version": "1.0.0",
+	"icons": {"128": "icon128.png"},
+	"browser_action": {
+		"default_icon": "favicon.ico",
+		"default_popup": "index.html"
+	},
+  "permissions": ["activeTab"],
+  "content_security_policy": "script-src 'self' 'sha256-ym7uEcqprq+TMaujtYw9S7FE2oYz3VTbU+hBRo0gpGg='; object-src 'self'",
+  "web_accessible_resources": [
+    "index.html",
+    "/static/*"
+  ]
 }
